# mc

./: .gitignore  .lokee  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  g.sh  jot.yaml  mc.toml  toc.xml
.agent-docs/: CODE_PATTERNS.md  FILE_PURPOSE_INDEX.md  PROJECT_OVERVIEW.md  RELATIONSHIP_MAP.md  WORKING_NOTES.md
.ctxt/: 2025-09-26-run-cargp-build-release-then-receive-response.txt  2025-09-26-utilsmc-read-the-readme-to-understand-our.txt  2025-10-20-lets-plan-a-more-intuitive-and-minimally-transpare.txt
.cursor/commands/: explore.md  explore_hydrogen.md
.github/ISSUE_TEMPLATE/: toc.xml
.github/workflows/: ci.yml  release.yml
.tks/: tmplt.yml
.tks/review/: implementation_notes.md  performance_scan.yml
benches/: performance.rs
docs/: AGENTS.md  API.md  CHANGELOG.md  DEVELOPMENT_LOG.md  FILE_CHANGES.md  LICENSE  PRD.md  TECHNICAL_SPEC.md  implementation_notes.md  toc.xml
docs/dev/: ARCHITECTURE.md  TECHNICAL_SPEC.md
scripts/: g.sh
src/: lib.rs  main.rs  types.rs
src/cli/: mod.rs
src/config/: mod.rs
src/engine/: cleaner.rs  mod.rs  scanner.rs
src/patterns/: builtin.rs  matcher.rs  mod.rs
src/safety/: guards.rs  mod.rs
src/utils/: mod.rs  progress.rs
tests/: cli_integration.rs
