[package]
name = "mc"
version = "0.2.0"
edition = "2021"
authors = ["Mr. Cleann Contributors"]
description = "A high-performance build directory cleaner for modern development workflows"
license = "MIT"
repository = "https://github.com/dusk-labs/mc"
readme = "README.md"
keywords = ["clean", "build", "cache", "cli", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rayon = "1.10"
walkdir = "2.5"
glob = "0.3"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
colored = "2.1"
dashmap = "6.0"
crossbeam-channel = "0.5"
chrono = "0.4"
humansize = "2.1"
directories = "5.0"
once_cell = "1.19"
regex = "1.10"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
proptest = "1.4"
assert_fs = "1.1"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
